Added wxPy/distutils to the source package and try again for 2.4.0.3
git-svn-id: http://svn.wxwidgets.org/svn/wx/wxWidgets/branches/WX_2_4_BRANCH@18964 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775

--- a/debian/control.in
+++ b/debian/control.in
@@ -159,8 +159,8 @@ Description: wxWindows Cross-platform C++ GUI toolkit (development contrib libs)
 Package: wxwin=V-headers
 Architecture: any
 Section: devel
-Conflicts: wxwin-headers, libwxgtk2.3
-Replaces: wxwin-headers, wxgtk2.1-dev
+Conflicts: wxwin-headers
+Replaces: wxwin-headers, wxgtk2.1-dev, libwxgtk2.3
 Provides: wxwin-headers
 Description: wxWindows Cross-platform C++ GUI toolkit (header files)
  wxWindows is a class library for C++ providing GUI (Graphical User
