--- a/Makefile.in
+++ b/Makefile.in
@@ -1441,6 +1441,8 @@ PYTHON_DIST:
 	mkdir $(DISTDIR)/wxPython/demo/bmp_source
 	mkdir $(DISTDIR)/wxPython/demo/data
 	mkdir $(DISTDIR)/wxPython/demo/dllwidget
+	mkdir $(DISTDIR)/wxPython/distutils
+	mkdir $(DISTDIR)/wxPython/distutils/command
 	mkdir $(DISTDIR)/wxPython/src
 	mkdir $(DISTDIR)/wxPython/src/gtk
 	mkdir $(DISTDIR)/wxPython/scripts
@@ -1469,6 +1471,8 @@ PYTHON_DIST:
 	-cp $(WXDIR)/wxPython/demo/bitmaps/* $(DISTDIR)/wxPython/demo/bitmaps
 	-cp $(WXDIR)/wxPython/demo/bmp_source/* $(DISTDIR)/wxPython/demo/bmp_source
 	-cp $(WXDIR)/wxPython/demo/data/* $(DISTDIR)/wxPython/demo/data
+	-cp $(WXDIR)/wxPython/demo/distutils/*.py $(DISTDIR)/wxPython/distutils
+	-cp $(WXDIR)/wxPython/demo/distutils/command/*.py $(DISTDIR)/wxPython/distutils/command
 	-cp $(WXDIR)/wxPython/demo/dllwidget/Makefile $(DISTDIR)/wxPython/demo/dllwidget
 	-cp $(WXDIR)/wxPython/demo/dllwidget/test_* $(DISTDIR)/wxPython/demo/dllwidget
 	-cp $(WXDIR)/wxPython/scripts/* $(DISTDIR)/wxPython/scripts
