--- a/Makefile.in
+++ b/Makefile.in
@@ -1471,10 +1471,10 @@ PYTHON_DIST:
 	-cp $(WXDIR)/wxPython/demo/bitmaps/* $(DISTDIR)/wxPython/demo/bitmaps
 	-cp $(WXDIR)/wxPython/demo/bmp_source/* $(DISTDIR)/wxPython/demo/bmp_source
 	-cp $(WXDIR)/wxPython/demo/data/* $(DISTDIR)/wxPython/demo/data
-	-cp $(WXDIR)/wxPython/demo/distutils/*.py $(DISTDIR)/wxPython/distutils
-	-cp $(WXDIR)/wxPython/demo/distutils/command/*.py $(DISTDIR)/wxPython/distutils/command
 	-cp $(WXDIR)/wxPython/demo/dllwidget/Makefile $(DISTDIR)/wxPython/demo/dllwidget
 	-cp $(WXDIR)/wxPython/demo/dllwidget/test_* $(DISTDIR)/wxPython/demo/dllwidget
+	cp $(WXDIR)/wxPython/distutils/*.py $(DISTDIR)/wxPython/distutils
+	cp $(WXDIR)/wxPython/distutils/command/*.py $(DISTDIR)/wxPython/distutils/command
 	-cp $(WXDIR)/wxPython/scripts/* $(DISTDIR)/wxPython/scripts
 	-cp $(WXDIR)/wxPython/src/* $(DISTDIR)/wxPython/src
 	cp $(WXDIR)/wxPython/src/gtk/*.py $(DISTDIR)/wxPython/src/gtk
