fix broken doc build.
git-svn-id: http://svn.wxwidgets.org/svn/wx/wxWidgets/branches/WX_2_4_BRANCH@18966 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775

--- a/debian/rules
+++ b/debian/rules
@@ -389,6 +389,7 @@ build-doc-stamp: build-gtk-shared-stamp
 	dh_testdir
 	cd $(objdir_gtk_shared)/utils/tex2rtf/src \
 		&& $(MAKE)
+	rm -rf $(objdir_doc)
 	mkdir $(objdir_doc)
 	mkdir $(objdir_doc_cruft)
 	cd $(objdir_doc_cruft) \
