Use version.mak on the 2.4 branch too
git-svn-id: http://svn.wxwidgets.org/svn/wx/wxWidgets/branches/WX_2_4_BRANCH@19326 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775

--- a/src/makevc.env
+++ b/src/makevc.env
@@ -12,7 +12,9 @@
 RM= erase
 !endif
 
-WXVERSION=240
+# read version numbers
+!include "version.mak"
+WXVERSION=$(wxMAJOR_VERSION)$(wxMINOR_VERSION)$(wxRELEASE_NUMBER_IFUNSTABLE)
 
 # WIN95 means "all systems newer than Win95", i.e. Win9x and NT 4+
 WIN95=1
