--- a/Makefile.in
+++ b/Makefile.in
@@ -1153,7 +1153,7 @@ SAMPLES_DIST: ALL_GUI_DIST
 	cp $(SAMPDIR)/mobile/styles/*.cpp $(DISTDIR)/samples/mobile/styles
 	cp $(SAMPDIR)/mobile/styles/*.h $(DISTDIR)/samples/mobile/styles
 	cp $(SAMPDIR)/mobile/styles/*.jpg $(DISTDIR)/samples/mobile/styles
-    
+
 	mkdir $(DISTDIR)/samples/dialup
 	cp $(SAMPDIR)/dialup/Makefile.in $(DISTDIR)/samples/dialup
 	cp $(SAMPDIR)/dialup/makefile.unx $(DISTDIR)/samples/dialup
@@ -1449,6 +1449,7 @@ PYTHON_DIST:
 	mkdir $(DISTDIR)/wxPython/wxPython
 	mkdir $(DISTDIR)/wxPython/wxPython/lib
 	mkdir $(DISTDIR)/wxPython/wxPython/lib/PyCrust
+	mkdir $(DISTDIR)/wxPython/wxPython/lib/PyCrust/decor
 	mkdir $(DISTDIR)/wxPython/wxPython/lib/colourchooser
 	mkdir $(DISTDIR)/wxPython/wxPython/lib/editor
 	mkdir $(DISTDIR)/wxPython/wxPython/lib/mixins
@@ -1481,6 +1482,7 @@ PYTHON_DIST:
 	cp $(WXDIR)/wxPython/src/gtk/*.cpp $(DISTDIR)/wxPython/src/gtk
 	cp $(WXDIR)/wxPython/wxPython/lib/*.py $(DISTDIR)/wxPython/wxPython/lib
 	cp $(WXDIR)/wxPython/wxPython/lib/PyCrust/*.py $(DISTDIR)/wxPython/wxPython/lib/PyCrust
+	cp $(WXDIR)/wxPython/wxPython/lib/PyCrust/decor/*.py $(DISTDIR)/wxPython/wxPython/lib/PyCrust/decor
 	cp $(WXDIR)/wxPython/wxPython/lib/colourchooser/*.py $(DISTDIR)/wxPython/wxPython/lib/colourchooser
 	cp $(WXDIR)/wxPython/wxPython/lib/editor/*.py $(DISTDIR)/wxPython/wxPython/lib/editor
 	cp $(WXDIR)/wxPython/wxPython/lib/mixins/*.py $(DISTDIR)/wxPython/wxPython/lib/mixins
